2010-05-20  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* kern/emu/hostdisk.c (grub_util_biosdisk_get_grub_dev) [__NetBSD__]:
	Fix merge error in NetBSD code.
	(find_partition_start) [__NetBSD__]: Likewise.

2010-05-19  BVK Chaitanya  <bvk.groups@gmail.com>

	Fix grub-mkrescue usage unit testing.

	* tests/util/grub-shell.in: Use --grub-mkimage with grub-mkrescue.

2010-05-18  Christian Franke  <franke@computer.org>

	* util/grub.d/10_windows.in: Use path names instead of
	drive letters to prevent warning from Cygwin 1.7.
	Add drivemap command to menuentry if needed.

2010-05-18  Justus Winter  <4winter@informatik.uni-hamburg.de>

	* util/grub.d/10_hurd.in: Include all gnumach* kernels, not only
	gnumach and gnumach.gz.

2010-05-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/i18n.h (gettext): Inline instead of using #define.
	(grub_gettext): Likewise.
	(_): Likewise.

2010-05-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.in (CPPFLAGS): Replace -DGRUB_LIBDIR with
	-DGRUB_PKGLIBROOTDIR= and prepend @PACKAGE_TARNAME@. All users updated.
	* util/grub-mkimage.c (image_targets): Add i386-multiboot.
	(main): Add a slash after pkglibdirroot.

2010-05-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Add missing "in" keyword.

2010-05-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Remove -O i386-pc duplication.
	Reported by: Seth Goldberg.

2010-05-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/POTFILES: Rename util/grub-mkrawimage.c to util/grub-mkimage.c.

2010-05-18  Colin Watson  <cjwatson@ubuntu.com>

	* configure.ac: Check for Linux device-mapper support.

	* util/hostdisk.c (device_is_mapped): New function.
	(find_partition_start): New function, partly broken out from
	linux_find_partition and grub_util_biosdisk_get_grub_dev but with
	device-mapper support added.
	(linux_find_partition): Use find_partition_start.
	(convert_system_partition_to_system_disk): Add `st' argument.